# cur_extractor_admin

./: .dockerignore  .ec2-instance-setup  .env-SAMPLE  .gitignore  .pylintrc  Dockerfile  Dockerfile-prod  LICENSE  Makefile  README.md  docker-compose-prod.yaml  docker-compose.yaml  install-dev.md  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_reportinfo_blended_reportinfo_credit_and_more.py
cur/: apps.py  models.py  s3_handler.py  tasks.py
cur/migrations/: 0001_initial.py
cur_extractor/: celery.py  settings.py  urls.py  wsgi.py
cur_extractor/Config/: Config.py
proxy/: default.conf
scripts/: dev-entrypoint.sh  prod-entrypoint.sh
src/: dev-entrypoint.sh  manage.py
src/accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_storageinfo_name.py  0003_remove_reportinfo_prefix.py  0004_reportinfo_external_id_storageinfo_external_id.py
src/cur/: apps.py  extractor.py  models.py  s3_handler.py  tasks.py  urls.py  views.py
src/cur/Utils/: GZIPHandler.py
src/cur/migrations/: 0001_initial.py
src/cur_extractor/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/content/: create-company.html  create-linked-account.html  dashboard.html  login.html  view-accounts.html  view-companies.html  view-credentials.html  view-linked-accounts.html  view-payer-accounts.html  view-report-infos.html  view-storage-infos.html
templates/layout/: base.html  base2.html  navigation.html
(+18 files in other folders)
