[tool.poetry]
name = "cur_refinery"
version = "0.1.0"
description = ""
authors = ["Jose <Jose>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djongo = "^1.3.6"
pymongo = "3.12.3"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
