[tool.poetry]
name = "cur_refinery"
version = "0.1.0"
description = ""
authors = ["Jose <Jose>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
djongo = "^1.3.6"
pymongo = "3.12.3"
pytz = "^2021.3"
boto3 = "^1.20.44"
pandas = "^1.4.0"
APScheduler = "^3.8.1"
celery = "^5.2.3"
redis = "^4.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
